<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pibot_viz</name>
  <version>0.0.0</version>
  <description>A package to visualize the PiBot</description>
  <maintainer email="olepo89@gmail.com">Ole P. Orhagen</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Automatically publish 'sensor_msgs/JointStates' from parsing the URDF of a robot model -->
  <depend>joint_state_publisher</depend>
  <!-- Control the standard states from above using a gui -->
  <depend>joint_state_publisher_gui</depend>
  <!-- Take Sensor msgs, and produce the frame transforms for the robot from the URDF -->
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
